<resources>
    <string name="app_name">NSHAPE - Coaches</string>
    <string name="Halls">النوادي</string>
    <string name="Coaches">مدربين</string>
    <string name="Stores">متاجر</string>
    <string name="default_notification_channel_id" translatable="false">Mooda</string>
    <string name="GOOGLE_API">AIzaSyCtEPB8XKUulPq0c9VMWgH1eNnSk_NHdCI</string>
    <string name="Welcome">أهلا بيك</string>
    <string name="Yes">نعم</string>
    <string name="No">لا</string>
    <string name="OK">حسنا</string>
    <string name="ExitTitle">خروج !</string>
    <string name="ExitMeg">هل تريد الخروج من التطبيق</string>
    <string name="Home">الرئيسية</string>
    <string name="UserIfo">معلومات المستخدم</string>
    <string name="SubscribeDetails">تفاصيل الاشتراك</string>
    <string name="CoachesSubscribe">اشتراكات المدربين</string>
    <string name="Register">طلب انضمام</string>
    <string name="HasNoAcc">انضم لفريق المدربين</string>
    <string name="Login">تسجيل دخول</string>
    <string name="OldPassword">كلمة المرور القديمة</string>
    <string name="Password">كلمة المرور*</string>
    <string name="Change">تغيير</string>
    <string name="ConfirmPassword">إعادة كتابة كلمة المرور</string>
    <string name="PassValid">ادخل كلمة المرور بشكل صحيح</string>
    <string name="ForgetPass"><u>نسيت كلمة المرور ؟</u></string>
    <string name="ForgetPass2">نسيت كلمة المرور </string>
    <string name="EmptyField">من فضلك ادخل جميع الحقول الإجبارية</string>
    <string name="Email">البريد الالكتروني*</string>
    <string name="ValidMail">من فضلك ادخل البريد الالكتروني بشكل صحيح</string>
    <string name="UnKnownError">خطأ غير متوقع</string>
    <string name="UpdateDone">تم تحديث البيانات بنجاح</string>
    <string name="UpdateError">لم يتم تحديث البيانات</string>
    <string name="ChangeNumber">تغيير الرقم</string>
    <string name="EnterSmsCode">أدخل الرمز المكون من ستة أرقام الذي \n تم ارساله لرقم</string>
    <string name="Resend">أعادة إرسال الرمز خلال : </string>
    <string name="ResendClick">إضغط لإعادة الإرسال</string>
    <string name="Second">ثانية</string>
    <string name="Mobile">رقم الهاتف*</string>
    <string name="About">من نحن</string>
    <string name="AboutCoach">نظرة عامة</string>
    <string name="WorkTimes2">المواعيد المتاحه</string>
    <string name="WorkTimes3">مواعيد العمل اليومية</string>
    <string name="Plans">خطط</string>
    <string name="From">من</string>
    <string name="To">الي</string>
    <string name="Name_Ar">الاسم بالعربي</string>
    <string name="Name_En">الاسم بالإنجليزية</string>
    <string name="Desc_Ar">الوصف بالعربي</string>
    <string name="Desc_En">الوصف بالإنجليزية</string>
    <string name="Media">الفيديوهات والصور</string>
    <string name="Videos">الفيديوهات</string>
    <string name="Rates">التقييمات</string>
    <string name="Rates2">المراجعات</string>
    <string name="Chats">المحادثات</string>
    <string name="Send">إرسال</string>
    <string name="ExistPhone">الهاتف الذي ادخلته مسجل من قبل </string>
    <string name="ExistEmail">البريد الالكتروني الذي ادخلته مسجل من قبل</string>
    <string name="Skip2">تخطي</string>
    <string name="Rate">تقييم</string>
    <string name="EnterRate">برجاء التقييم</string>
    <string name="CommentRate">اضف ملاحظاتك</string>
    <string name="NewPass">يرجى إدخال كلمة المرور الجديدة</string>
    <string name="NoData">لا يوجد اي بيانات</string>
    <string name="FullName">الاسم بالكامل*</string>
    <string name="EditName">تعديل الإسم</string>
    <string name="EditDesc">تعديل الوصف</string>
    <string name="FullName_en">الأسم بالكامل بالأنجليزية*</string>
    <string name="Plan_Title_ar">اسم الباقة ( عربي ) *</string>
    <string name="Plan_Title_en">اسم الباقة ( انجليزي ) *</string>
    <string name="Plan_Desc_ar">تفاصيل الباقة ( عربي ) *</string>
    <string name="Plan_Desc_en">تفاصيل الباقة ( انجليزي ) *</string>
    <string name="Plan_Period">مدة الباقة ( شهور ) *</string>
    <string name="Plan_Price">سعر الباقة *</string>
    <string name="Plan_Discount">نسبة الخصم( % )</string>
    <string name="Plan_After_Discount">السعر بعد الخصم</string>
    <string name="Extra_Details">تفاصيل اضافية </string>
    <string name="Extra_Details_ar">تفاصيل اضافية %s ( عربي ) </string>
    <string name="Extra_Details_en">تفاصيل اضافية %s ( انجليزي ) </string>
    <string name="SelectGender">من فضلك قم باختيار اذا كنت ذكر ام انثي</string>
    <string name="Male">ذكر</string>
    <string name="FeMale">انثي</string>
    <string name="ValidMobile">من فضلك ادخل رقم الهاتف بشكل صحيح</string>
    <string name="Conditions">شروط وأحكام</string>
    <string name="WantDelete">هل تريد الحذف ؟</string>
    <string name="EditProfile">تعديل الملف الشخصي</string>
    <string name="Error">قد تفقد بعض البيانات بسبب قطع الاتصال .. ويتم اعاده تشغيل التطبيق</string>
    <string name="Start">ابدأ</string>
    <string name="DeleteAddress">حذف العنوان</string>
    <string name="ChooseBest">خصومات</string>
    <string name="InstantNotifications">خليك بالبيت</string>
    <string name="MostRecentForYou">خضروات والفواكه</string>
    <string name="MedLawDesc4">توصلك جميع الطلبات بأقل تكلفة توصيل</string>
    <string name="MedLawDesc3">خصومات وعروض يومية على مختلف المنتجات</string>
    <string name="MedLawDesc">يتيح لك تطبيق  <b> ميد لو </b>  حجز مواعيد للمحامين او الأطباء الأفضل والأقرب اليك</string>
    <string name="MedLawDesc2">تسوق جميع منتجات الخضار والفاكهة بأفضل جودة وأقل سعر</string>
    <string name="Contonio">متابعة</string>
    <string name="Save">حفظ</string>
    <string name="Save2">حفظ التعديلات</string>
    <string name="ChangePass">تغيير كلمة المرور</string>
    <string name="DOB">تاريخ الميلاد</string>
    <string name="Notifications">الإشعارات</string>
    <string name="Search">البحث</string>
    <string name="Logout">تسجيل خروج</string>
    <string name="Account">حسابي</string>
    <string name="More">المزيد</string>
    <string name="DK">د.ك</string>
    <string name="DK3">دينار</string>
    <string name="Cancel">إلغاء</string>
    <string name="Age">السن*</string>
    <string name="WorkDay">ايام العمل</string>
    <string name="DailyWorkTimes">مواعيد العمل اليومية</string>
    <string name="ExpYears">سنوات الخبرة*</string>
    <string name="ShortDesc">نبذة مختصرة</string>
    <string name="ShortDesc_en">نبذة مختصرة بالانجليزية</string>
    <string name="Type">النوع</string>
    <string name="Subscribe">الاشتراك</string>
    <string name="AddSubscribe">اضافة الاشتراكات</string>
    <string name="AddMore">اضافة المزيد</string>
    <string name="Images">الصور</string>
    <string name="MustEnterMessage">يجب كتابة نص قبل الإرسال</string>
    <string name="addMessage">اكتب رسالة...</string>
    <string name="Add">إضافه</string>
    <string name="Delete">حذف</string>
    <string name="HasDiscount">تفعيل الخصم</string>
    <string name="SetAddressDef">استخدم هذا العنوان</string>
    <string name="EndDate">تاريخ الانتهاء</string>
    <string name="IDNumber">رقم الاشتراك</string>
    <string name="Ended">للمزيد من التفاصيل قم بفحص قسم\n الطلبات الخاص بك في حسابك</string>
    <string name="AddAd">اضافه اعلان</string>
    <string name="FinishOrder2">تم ارسال طلبك وسيتم التواصل معك فى اقرب وقت</string>
    <string name="ClosedChat">مغلق</string>
    <string name="AvailableChat">متاح</string>
    <string name="CannotSend">لا يمكنك ارسال محادثة</string>
    <string name="CloseChat">غلق المحادثة</string>
    <string name="DeleteChat">حذف المحادثة</string>
    <string name="Arabic">اللغة العربية</string>
    <string name="English">English</string>
    <string name="StartWith">يبدأ من </string>
    <string name="ShowAll">الكل</string>
    <string name="CurrentChats">المحادثات المتاحة حاليا</string>
    <string name="UsersChats">محادثات المشتركين</string>
    <string name="CopyRight">اعداد وتصميم وبرمجة \n  شركة يوسمارت للبرمجيات \n u-smart.co</string>
    <string name="changeLanguage">تغيير اللغة</string>
    <string name="loginError">خطأ في بيانات الدخول</string>
    <string name="customerSubscribers">اشتراكات العملاء</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف الباقة</string>
    <string name="deleteSuccessfully">تم حذف الباقة بنجاح</string>
    <string name="deletedFailure">لم يتم حذف الباقة</string>
    <string name="askForDelete">هل تريد حذف الباقة؟</string>
    <string name="viewStories">مشاهدة الاستوري</string>
    <string name="durationTime">الفيديو أكبر من 10 ثواني</string>

    <string-array name="nav_account">
        <item> الاشتراكات </item>
        <item> الاشعارات </item>
        <item> اشتراكات العملاء </item>
        <item> شروط واحكام </item>
        <item> عن التطبيق </item>
        <item> عربي </item>
        <item> English </item>
    </string-array>
</resources>
