<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/askForDelete"
        android:textColor="@color/uvv_black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/Yes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:background="@drawable/btn_gray"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Yes"
            android:textColor="@color/uvv_black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/No"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.4"
            android:background="@drawable/btn_gray"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/No"
            android:textColor="@color/uvv_black"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>