<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_msg"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layoutDirection="ltr"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/MsgTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text=""
        android:textColor="#4FBDDA"
        android:textSize="13sp"
       style="@style/BoldText" />

    <TextView
        android:id="@+id/MsgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MsgTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="3dp"
        android:layout_margin="5dp"
        android:text="@string/WantDelete"
        android:textColor="#000"
        android:textSize="12sp"
        style="@style/BoldText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MsgText"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Yes"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_top_right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/Yes"
            android:textColor="#fff"
            android:textSize="12sp"
            style="@style/BoldText" />

        <Button
            android:id="@+id/btn_No"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_top"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/No"
            android:textColor="#4FBDDA"
            android:textSize="12sp"
            style="@style/BoldText" />
    </LinearLayout>

</RelativeLayout>