<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/MsgTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/EnterRate"
        android:textColor="#000000"
        android:textSize="14sp"
        style="@style/BoldText" />

    <TextView
        android:id="@+id/MsgDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text=""
        android:textColor="#000000"
        android:textSize="10sp"
        style="@style/BoldText" />

    <RatingBar
        style="?android:attr/ratingBarStyleIndicator"
        android:id="@+id/rateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layoutDirection="rtl"
        android:numStars="5"
        android:rating="2"
        android:isIndicator="false"
        android:stepSize="1"
        android:theme="@style/RatingBar" />


    <EditText
        android:id="@+id/Comment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/MsgText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:alpha=".8"
        android:background="@drawable/edittext"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/CommentRate"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#B9B9B9"
        android:textColorHint="#B9B9B9"
        android:textSize="12sp"
      style="@style/BoldText"></EditText>



        <Button
            android:id="@+id/btn_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_top"
            android:padding="7dp"
            android:layout_marginTop="20dp"
            android:text="@string/Add"
            android:textColor="#000000"
            android:textSize="18sp"
           style="@style/BoldText" />

</LinearLayout>