<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/List"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/btn_white_radius0"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layoutDirection="ltr"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_green_gradient"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_Price"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="left"
                android:paddingRight="5dp"
                android:text="6.00 د.ك"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_Title"
                    style="@style/BoldText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="12dp"
                    android:text="Title Title Title Title Title"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/tv_PlanDate"
                    style="@style/LightText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:paddingRight="12dp"
                    android:text="@string/StartWith"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Logo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/def_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_Rate"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="3"
                android:drawableLeft="@mipmap/ic_star"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:visibility="invisible"
                android:text="@string/Rate"
                android:textColor="#000000"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_EndDate"
                        style="@style/LightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="right"
                        android:layoutDirection="rtl"
                        android:text="2"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        style="@style/BoldText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/EndDate"
                        android:textColor="#000000"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ID"
                        style="@style/LightText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="right"
                        android:layoutDirection="rtl"
                        android:text="2"
                        android:textColor="#000000"
                        android:textSize="12sp" />

                    <TextView
                        style="@style/BoldText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/IDNumber"
                        android:textColor="#000000"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Home"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_radius0"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/SubscribeDetails"
            android:textColor="#000000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_UserPage"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_green_gradient"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/UserIfo"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

    </LinearLayout>
</LinearLayout>