<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/Header"
            layout="@layout/header_section_work" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Header"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="1dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btn_white_10"
                    android:hint="@string/Desc_Ar"
                    android:layoutDirection="rtl"
                    android:textColorHint="#000000"
                    app:endIconMode="none"
                    app:startIconContentDescription="@string/app_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_Desc_ar"
                        style="@style/BoldText"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="right|top"
                        android:inputType="text"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/btn_white_10"
                    android:hint="@string/Desc_En"
                    android:layoutDirection="rtl"
                    android:textColorHint="#000000"
                    app:endIconMode="none"
                    app:startIconContentDescription="@string/app_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_Desc_en"
                        style="@style/BoldText"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="right|top"
                        android:inputType="text"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

    <ImageView
        android:id="@+id/HideAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@mipmap/hide"
        android:contentDescription="TODO"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>
